--- a/src/app/clients/edit-form/edit-form.component.html
+++ b/src/app/clients/edit-form/edit-form.component.html
@@ -1,3 +1,7 @@
+<div class="alert alert-secondary mt-4 font-weight-bold" role="alert">
+  Fill client data
+</div>
+
 <form *ngIf="client">
   <div class="form-group">
     <label for="FirstName">First Name</label>
@@ -11,9 +15,9 @@
   </div>
   <div class="form-group">
     <label for="City">City</label>
-    <input type="text" [(ngModel)]="client.city" name="city" class="form-control" id="City"
-      placeholder="Enter city">
+    <input type="text" [(ngModel)]="client.city" name="city" class="form-control" id="City" placeholder="Enter city">
   </div>
-  <button type="button" class="btn btn-success" #saveBtn (click)="onSave()"><i class="fas fa-save"></i>
-    Save</button>
+  <div class="form-group text-center">
+    <button type="button" class="btn btn-success" #saveBtn (click)="onSave()"><i class="fas fa-save"></i> Save</button>
+  </div>
 </form>
