--- a/src/app/clients/list/list.component.html
+++ b/src/app/clients/list/list.component.html
@@ -4,32 +4,54 @@
   <!-- Clients list -->
   <div class="col-sm-12 col-md-8 col-lg-8 col-xl-8">
 
-    <a [routerLink]="['save']" [routerLinkActive]="'active'" [routerLinkActiveOptions]="{exact: true}"><button class="btn btn-secondary btn-sm float-right mt-1 mb-1">
-        <i class="fa fa-plus-circle"></i> Add client
-      </button>
-    </a>
+    <div class="col-12 text-center">
+      <a [routerLink]="['save']" [routerLinkActive]="'active'" [routerLinkActiveOptions]="{exact: true}">
+        <button class="btn btn-secondary btn-sm mt-2 mb-2">
+          <i class="fa fa-plus-circle"></i> Add client
+        </button>
+      </a>
+    </div>
+
 
     <!-- Clients list section -->
-    <table class="table">
-      <thead class="thead-light">
-        <tr align="center">
-          <th scope="col">#</th>
-          <th scope="col">First Name</th>
-          <th scope="col">Last Name</th>
-          <th scope="col">City</th>
-          <th scope="col">Actions</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr align="center" *ngFor="let client of clients">
-          <th scope="row">{{ client.id }}</th>
-          <td>{{ client.firstName }}</td>
-          <td>{{ client.lastName }}</td>
-          <td>{{ client.city }}</td>
-          <td><button class="btn btn-info" (click)="onEdit(client.id)"><i class="fas fa-edit"></i></button></td>
-        </tr>
-      </tbody>
-    </table>
+    <div class="table-responsive">
+      <table class="table">
+        <thead class="thead-light">
+          <tr align="center">
+            <th scope="col">#</th>
+            <th scope="col">First Name</th>
+            <th scope="col">Last Name</th>
+            <th scope="col">City</th>
+            <th scope="col" colspan="2">Actions</th>
+          </tr>
+        </thead>
+        <tbody>
+          <ng-container *ngIf="!clients">
+            <tr class="alert alert-info text-center">
+              <td colspan="5"><i class="fas fa-spinner fa-spin"></i> Loading data, please wait!</td>
+            </tr>
+          </ng-container>
+
+
+          <tr align="center" *ngFor="let client of clients | paginate: { itemsPerPage: count, currentPage: p }">
+            <th scope="row">{{ client.id }}</th>
+            <td>{{ client.firstName }}</td>
+            <td>{{ client.lastName }}</td>
+            <td>{{ client.city }}</td>
+            <td><button class="btn btn-info btn-sm" (click)="onEdit(client.id)"><i class="fas fa-edit"></i></button>
+            </td>
+            <td><button class="btn btn-danger btn-sm" (click)="onDelete(client.id)"><i
+                  class="fas fa-trash-alt"></i></button></td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+
+    <!--Including the pagination control.-->
+    <div class="text-center">
+      <pagination-controls (pageChange)="p = $event"></pagination-controls>
+    </div>
+
   </div>
 
 
