--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,7 +1,7 @@
 <!-- Navbar component -->
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" [routerLink]="''" [routerLinkActive]="'active'"
-    [routerLinkActiveOptions]="{exact: true}"><i class="fas fa-fire"></i> CRM</a>
+  <a class="navbar-brand" [routerLink]="''" [routerLinkActive]="'active'" [routerLinkActiveOptions]="{exact: true}"><i
+      class="fas fa-fire"></i> CRM</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav"
     aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -13,9 +13,17 @@
             class="fas fa-home"></i> Home <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-          <a class="nav-link" [routerLink]="'clients'" [routerLinkActive]="'active'"
-            [routerLinkActiveOptions]="{exact: true}"><i class="fas fa-users"></i> Clients</a>
-        </li>
+        <a class="nav-link" [routerLink]="'clients'" [routerLinkActive]="'active'"
+          [routerLinkActiveOptions]="{exact: true}"><i class="fas fa-users"></i> Clients</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" [routerLink]="'files'" [routerLinkActive]="'active'"
+          [routerLinkActiveOptions]="{exact: true}"><i class="fas fa-file-pdf"></i> Files</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" [routerLink]="'recorder'" [routerLinkActive]="'active'"
+          [routerLinkActiveOptions]="{exact: true}"><i class="far fa-play-circle"></i> Recorder</a>
+      </li>
       <li class="nav-item" *ngIf="afAuth.user | async; else showLoginLink">
         <a class="nav-link" style="cursor: pointer;" (click)="onLogout()"><i class="fas fa-sign-out-alt"></i> Logout</a>
       </li>
