--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,4 +1,4 @@
-<div class="col-sm-12 col-md-6 col-lg-6 col-xl-6 mx-auto">
+<div class="col-sm-12 col-md-6 col-lg-6 col-xl-6 mx-auto mt-3">
 
   <div class="alert alert-warning fade show" *ngIf="loginError">
     <i class="fas fa-exclamation"></i> Email or password is incorrect!
