--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -4,6 +4,11 @@
     <i class="fas fa-exclamation"></i> Email or password is incorrect!
   </div>
 
+  <div class="alert alert-info fade show">
+    use <strong>admin@haytham.me</strong> and <strong>admin1234</strong> for password
+  </div>
+
+
   <form>
     <div class="form-group">
       <label for="Email">Email address</label>
