Internal errors fixed

--- a/src/app/files/files.component.html
+++ b/src/app/files/files.component.html
@@ -31,7 +31,7 @@
 
   <div class="col-12 col-sm-12 col-md-8 col-lg-8 col-xl-8 mx-auto" *ngIf="fileUploaded">
     <div class="alert alert-success">
-      <i class="fa fa-check"></i> File uploaded successflly
+      <i class="fa fa-check"></i> File uploaded successfully
     </div>
   </div>
 
