--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -3,14 +3,14 @@
     <div class="container">
       <div class="row">
         <div class="col-sm-12 col-md-6 col-lg-6 col-xl-6 mt-3">
-          <h6>About</h6>
+          <h6><i class="fas fa-address-card"></i> About</h6>
           <p class="text-justify">
             Advanced software developer with 2 years of experience, developing and implementing interactive websites,
             web services and desktop applications. Innovative use of web frameworks to build professional websites as
             much as expected. Able to complete projects efficiently and satisfy customers with attractive, user-friendly
             websites and software development.
           </p>
-          <ul class="social-icons">
+          <ul class="social-icons text-center">
             <li><a class="linkedin" href="https://www.linkedin.com/in/haytham-dahri-645795155/" target="_blank"><i
                   class="fab fa-linkedin-in"></i></a></li>
             <li><a class="facebook" href="https://www.facebook.com/Haytham.dahri" target="_blank"><i
@@ -22,7 +22,7 @@
         </div>
 
         <div class="col-sm-12 col-md-6 col-lg-6 col-xl-6 mt-3">
-          <h6>Skills</h6>
+          <h6><i class="fas fa-portrait"></i> Skills</h6>
           <ul class="footer-links">
             <li><a href="https://www.oracle.com/index.html">JAVA</a></li>
             <li><a href="https://www.python.org/">PYTHON</a></li>
