--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -5,7 +5,7 @@
   </div>
 
   <div class="alert alert-info fade show">
-    use <strong>admin@haytham.me</strong> and <strong>admin1234</strong> for password
+      <i class="fas fa-info-circle"></i> use <strong>admin@haytham.me</strong> and <strong>admin1234</strong> for password
   </div>
 
 
